--- a/cpm/messages/templates/messages/message_widget.html
+++ b/cpm/messages/templates/messages/message_widget.html
@@ -16,7 +16,7 @@
     .wpl-widget .form-actions {
         margin-top: 0;
     }
-    .wpl-widget.recent-conversations ul {
+    .wpl-widget.messages ul {
         margin-bottom: 0;
         margin-left: -1px;
         display: block;
