--- a/cpm/projects/templates/projects/project_form.html
+++ b/cpm/projects/templates/projects/project_form.html
@@ -7,22 +7,25 @@
 {% block content %}
 
     <div class="row">
-    <div class="span8">
-            <div class="well pad-0">
+        <div class="span8">
+            <div class="well pad-0" id="form-wizard">
                 <div class="header">
                     <i class="pull-left icon-briefcase colour"></i>
+
                     <h2 id='project-title'>Project Wizard</h2>
                 </div>
 
                 <div id="new-project">
                     <div class="instructions">
                         <p class="lead">
-                        Step 1: Create New Project
+                            Step 1: Create New Project
                         </p>
+
                         <p>
                             Fill out the fields below to create a new project.
                             Next you will add categories and tasks to this projects
                         </p>
+
                         <p class="success-message">
                             New Project added! Now create tasks for this project.
                         </p>
@@ -34,10 +37,12 @@
                         <p class="lead">
                             Step 2: Create Tasks
                         </p>
+
                         <p>
                             Fill out the fields below to create a new project.
                             Next you will add categories and tasks to this projects
                         </p>
+
                         <p class="success-message">
                             New Project added! Now create tasks for this project.
                         </p>
@@ -51,26 +56,18 @@
                     <a href='{% url 'tasks:task-category-form' %}' target="_blank">add more</a>
                 </div>
 
+            </div>
         </div>
-    </div>
-    <div class="span4">
-        <ul class="unstyled" id="task-category-list">
-            {% for cat in task_categories %}
-                <li>{{ cat.title }}
-                <ul id="category-{{ cat.id }}"> </ul>
-                </li>
-            {% endfor %}
-        </ul>
-        <ul class="unstyled" id="task-list">
-            {% if project %}
-                {% for task in project.task_set.all %}
-                    <li>{{ task.title }}</li>
+        <div class="span4">
+            <ul class="unstyled" id="task-category-list">
+                {% for cat in task_categories %}
+                    <li>{{ cat.title }}
+                        <ul id="category-{{ cat.id }}"></ul>
+                    </li>
                 {% endfor %}
-            {% endif %}
+            </ul>
 
-        </ul>
-
-    </div>
+        </div>
     </div>
 
 {% endblock %}
@@ -78,134 +75,181 @@
 
 {% block extra_js %}
 
-<script type="text/javascript">
+    <script type="text/javascript">
 
-var new_task = $('#new-task');
-var task_form = $('#task-form');
-var task_form_url = "{% url 'tasks:task-form' %}";
+        var new_task = $('#new-task');
+        var task_form = $('#task-form');
+        var task_form_url = "{% url 'tasks:task-form' %}";
 
-var new_project = $('#new-project');
-var project_form = $('#project-form');
-var project_form_url = "{% url 'projects:project-form' %}";
+        var new_project = $('#new-project');
+        var project_form = $('#project-form');
+        var project_form_url = "{% url 'projects:project-form' %}";
 
-var new_task_category = $('#new-task-category');
+        var project_id;
 
-
-$(function() {
-    new_task.hide();
-});
-function getTasks(pid) {
-    $.getJSON('/cpm/tasks/project/' + pid, function(result) {
-        $.each(result, function (i, field) {
-            console.log(field.title);
-        });
-        return result;
-    });
-}
-
-$(function() {
-    $("#submit-id-save_project").click(function() {
-        console.log($(project_form).serialize());
-        var project_form_title = $(project_form).find('#id_title').val();
-
-        if (project_form_title == "") {
-            $(project_form).find("#div_id_title").addClass('error');
-            $(project_form_title).after('<span class="help-inline">Title required</span>');
-            $(project_form_title).focus();
-            return false;
-        } else {
-            $('.help-inline').remove();
-            $("#div_id_title").removeClass('error');
+        var new_task_category = $('#new-task-category');
+        function getCookie(name) {
+            var cookieValue = null;
+            if (document.cookie && document.cookie != '') {
+                var cookies = document.cookie.split(';');
+                for (var i = 0; i < cookies.length; i++) {
+                    var cookie = jQuery.trim(cookies[i]);
+                    // Does this cookie string begin with the name we want?
+                    if (cookie.substring(0, name.length + 1) == (name + '=')) {
+                        cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                        break;
+                    }
+                }
+            }
+            return cookieValue;
         }
-        $.ajax({
-            url: project_form_url,
-            type: "POST",
-            data: $(project_form).serialize(),
-            success: function(data) {
-                if (!(data['success'])) {
-                    console.log('Fail');
-                }
-                else {
-                    project_form_url = data['update_url'];
-                    new_project.hide(2000);
-                    new_task.show(2000);
-                    $(task_form).find('input#id_project').val(data['pk']);
-                    // Here you can show the user a success message or do whatever you need
-                    $(new_project).find('.success-message').show(1000).hide(5000);
-                }
-            },
-            error: function () {
-                $(project_form).find('.error-message').show()
-            }
-        });
-        return false;
-    });
-});
 
-$(function() {
-    $("#submit-id-save_task").click(function() {
-        console.log($(task_form).serialize());
-        var task_form_title = $(task_form).find('#id_title').val();
-        var task_form_category = $(task_form).find('#id_category').val();
 
-        $.ajax({
-            url: "{% url 'tasks:task-form' %}",
-            type: "POST",
-            data: $(task_form).serialize(),
-            success: function(data) {
-                if (!(data['success'])) {
-                    // Here we replace the form, for the
-                    $(task_form).replaceWith(data['form_html']);
+            $('#form-wizard').on('submit', '#project-form', function (event) {
+                event.preventDefault();
+                console.log($(project_form).serialize());
+                var project_form_title = $(project_form).find('#id_title').val();
+
+                if (project_form_title == "") {
+                    $(project_form).find("#div_id_title").addClass('error');
+                    $(project_form_title).after('<span class="help-inline">Title required</span>');
+                    $(project_form_title).focus();
+                    return false;
+                } else {
+                    $('.help-inline').remove();
+                    $("#div_id_title").removeClass('error');
                 }
-                else {
-                    // Here you can show the user a success message or do whatever you need
-                    $(task_form).each(function() {
-                        this.reset();
-                    });
-                    $(new_task).find('.success-message').show(1000).hide(5000);
-                    $('#category-'+task_form_category).prepend('<li><a href="' + data['update_url'] + '" target="_blank">' + task_form_title + '</a></li>');
-                }
-            },
-            error: function () {
-                $(task_form).find('.error-message').show()
-            }
+                $.ajax({
+                    url: project_form_url,
+                    type: "POST",
+                    data: $(project_form).serialize(),
+                    success: function (data) {
+                        console.log(data['form_html']);
+                        if (!(data['success'])) {
+                            console.log('Fail');
+                        }
+                        else {
+                            project_form_url = data['update_url'];
+                            $('#new-project').hide(2000);
+                            $('#task-form').replaceWith(data['form_html']);
+                            $('#new-project').find('.success-message').show(1000).hide(5000);
+                            $('#new-task').show(2000);
+                        }
+                    },
+                    error: function () {
+                        $('#new-project').find('.error-message').show()
+                    }
+                });
+                return false;
+            });
+
+        $(function () {
+            new_task.hide();
         });
-        return false;
-    });
-});
-</script>
+        function getTasks(pid) {
+            $.getJSON('/cpm/tasks/project/' + pid, function (result) {
+                $.each(result, function (i, field) {
+                    console.log(field.title);
+                });
+                return result;
+            });
+        }
+        function getTaskForm(taskUrl) {
+            $.getJSON(taskUrl,function (data) {
+                $('#task-form').replaceWith(data['form_html']);
+            });
+        }
+
+        $('#form-wizard').on('submit', '#task-form', function (event) {
+            var $task_form = $(this);
+            event.preventDefault();
+            var task_form_title = $task_form.find('#id_title').val();
+            var task_form_category = $task_form.find('#id_category').val();
+            var task_url;
+            var cookie = 'csrfmiddlewaretoken=' + getCookie('csrftoken') + '&';
+
+            if (!$(this).attr('action')) {
+                task_url = task_form_url;
+            } else {
+                task_url = $(this).attr('action');
+            }
+
+            console.log(cookie + $(this).serialize());
+            $.ajax({
+                url: task_url,
+                type: "POST",
+                data:  cookie + $(this).serialize(),
+                success: function (data) {
+                    if (!(data['success'])) {
+                        // Here we replace the form, for the
+                        $task_form.replaceWith(data['form_html']);
+                    }
+                    else {
+                        // Here you can show the user a success message or do whatever you need
+                        $task_form.replaceWith(data['form_html']);
+                        $task_form.find('.success-message').show(1000).hide(5000);
+                        console.log(task_form_category);
+                        if ((data['new'])) {
+                            $('#category-' + task_form_category).prepend('<li><a href="' + data['update_url'] + '">' + task_form_title + '</a></li>');
+                        }
+                    }
+                },
+                error: function () {
+                    $task_form.find('.error-message').show()
+                }
+            });
+            return false;
+        });
+
+
+        $('#task-category-list').on('click', 'a', function (event) {
+            event.preventDefault();
+            getTaskForm($(this).attr('href'));
+        });
+    </script>
 
 {% endblock extra_js %}
 
 {% block extra_css %}
     <link rel='stylesheet' href="{% static 'css/font-awesome.min.css' %}">
     <style>
-    .success-message {
-        display: none;
-    }
+        .success-message {
+            display: none;
+        }
+
         .pad-0 {
             padding: 0;
         }
+
         .margin-0 {
             margin: 0;
         }
+
         .well .header {
             width: 100%;
             border-top-right-radius: 4px;
             border-top-left-radius: 4px;
         }
+
         .header i {
             padding: 15px;;
             font-size: 60px;
         }
-        .header .colour {color: #f7f7f7;}
-        .header .colour:hover {color: #19C1C3;}
+
+        .header .colour {
+            color: #f7f7f7;
+        }
+
+        .header .colour:hover {
+            color: #19C1C3;
+        }
 
         .header h2 {
             line-height: 90px;
             color: #fff;
             margin: 0;
         }
+
         .header {
             padding: 0 0;
             background: #323A45;
@@ -214,12 +258,15 @@ $(function() {
             width: 100%;
             z-index: 1000;
         }
+
         .form-actions, form {
             margin-bottom: 0;
         }
+
         .form-actions {
             background-color: #d3d3d3;
         }
+
         .header h2 {
             line-height: 90px;
             color: #fff;
