--- a/cpm/projects/templates/projects/project_form.html
+++ b/cpm/projects/templates/projects/project_form.html
@@ -14,8 +14,23 @@
 
                     <h2 id='project-title'>Project Wizard</h2>
                 </div>
+                <div class="">
+                    <ul class="nav nav-tabs" id="step-nav">
+                        <li class="active">
+                            <a href="#new-project">Project</a>
+                        </li>
+                        <li>
+                            <a href="#new-category">Categories</a>
+                        </li>
+                        <li>
+                            <a href="#new-task">Tasks</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="tab-content">
 
-                <div id="new-project">
+
+                <div class="tab-pane active" id="new-project">
                     <div class="instructions">
                         <p class="lead">
                             Step 1: Create New Project
@@ -27,42 +42,50 @@
                         </p>
 
                         <p class="success-message">
-                            New Project added! Now create tasks for this project.
+                            New Project added!
                         </p>
                     </div>
                     {% crispy form %}
                 </div>
-                <div id="new-task">
+                <div class="tab-pane" id="new-category">
                     <div class="instructions">
                         <p class="lead">
-                            Step 2: Create Tasks
+                            Step 2: Modify or Create Categories
                         </p>
-
+                        <p>
+                            Fill out the fields below to create a new categories or skip this step and reuse existing categories.
+                        </p>
+                        <p class="success-message">
+                            New Category added! Now create tasks for this project.
+                        </p>
+                    </div>
+                    {% crispy task_category_form %}
+                </div>
+                <div class="tab-pane" id="new-task">
+                    <div class="instructions">
+                        <p class="lead">
+                            Step 3: Create Tasks
+                        </p>
                         <p>
                             Fill out the fields below to create a new project.
                             Next you will add categories and tasks to this projects
                         </p>
-
                         <p class="success-message">
-                            New Project added! Now create tasks for this project.
+                            New Task added!
                         </p>
                     </div>
                     {% crispy task_form %}
                 </div>
-                <div id="new-task-category">
-                    <h3>
-                        Categories
-                    </h3>
-                    <a href='{% url 'tasks:task-category-form' %}' target="_blank">add more</a>
-                </div>
 
+                </div>
             </div>
         </div>
         <div class="span4">
-            <ul class="unstyled" id="task-category-list">
+        <h3>Task Categories</h3>
+            <ul class="nav nav-list" id="task-category-list">
                 {% for cat in task_categories %}
-                    <li>{{ cat.title }}
-                        <ul id="category-{{ cat.id }}"></ul>
+                    <li><a href="{{ cat.get_update_url }}">{{ cat.title }}</a>
+                        <ul class="nav nav-list" id="ul-category-{{ cat.id }}"></ul>
                     </li>
                 {% endfor %}
             </ul>
@@ -77,9 +100,8 @@
 
     <script type="text/javascript">
 
-        var new_task = $('#new-task');
-        var task_form = $('#task-form');
         var task_form_url = "{% url 'tasks:task-form' %}";
+        var category_form_url = "{% url 'tasks:task-category-form' %}";
 
         var new_project = $('#new-project');
         var project_form = $('#project-form');
@@ -87,7 +109,8 @@
 
         var project_id;
 
-        var new_task_category = $('#new-task-category');
+        var new_task_category = $('#new-category');
+
         function getCookie(name) {
             var cookieValue = null;
             if (document.cookie && document.cookie != '') {
@@ -103,50 +126,8 @@
             }
             return cookieValue;
         }
-
-
-            $('#form-wizard').on('submit', '#project-form', function (event) {
-                event.preventDefault();
-                console.log($(project_form).serialize());
-                var project_form_title = $(project_form).find('#id_title').val();
-
-                if (project_form_title == "") {
-                    $(project_form).find("#div_id_title").addClass('error');
-                    $(project_form_title).after('<span class="help-inline">Title required</span>');
-                    $(project_form_title).focus();
-                    return false;
-                } else {
-                    $('.help-inline').remove();
-                    $("#div_id_title").removeClass('error');
-                }
-                $.ajax({
-                    url: project_form_url,
-                    type: "POST",
-                    data: $(project_form).serialize(),
-                    success: function (data) {
-                        console.log(data['form_html']);
-                        if (!(data['success'])) {
-                            console.log('Fail');
-                        }
-                        else {
-                            project_form_url = data['update_url'];
-                            $('#new-project').hide(2000);
-                            $('#task-form').replaceWith(data['form_html']);
-                            $('#new-project').find('.success-message').show(1000).hide(5000);
-                            $('#new-task').show(2000);
-                        }
-                    },
-                    error: function () {
-                        $('#new-project').find('.error-message').show()
-                    }
-                });
-                return false;
-            });
-
-        $(function () {
-            new_task.hide();
-        });
         function getTasks(pid) {
+            // TODO: REMOVE
             $.getJSON('/cpm/tasks/project/' + pid, function (result) {
                 $.each(result, function (i, field) {
                     console.log(field.title);
@@ -154,19 +135,145 @@
                 return result;
             });
         }
+        function getProjectForm(projectUrl) {
+            $.getJSON(projectUrl, function (data) {
+                $('#project-form').replaceWith(data['form_html']);
+            })
+        }
         function getTaskForm(taskUrl) {
-            $.getJSON(taskUrl,function (data) {
+            $.getJSON(taskUrl, function (data) {
                 $('#task-form').replaceWith(data['form_html']);
             });
         }
+        function getTaskCategoryForm(taskUrl) {
+            $.getJSON(taskUrl, function (data) {
+                $('#task-category-form').replaceWith(data['form_html']);
+            });
+        }
+
+        // Have to replace the OG form, therwise 2 csrf tokens are sent
+        getProjectForm(project_form_url);
+        getTaskCategoryForm(category_form_url);
+
+        function showStep(step) {
+            if (step == 1) {
+                $('#step-nav a[href="#new-project"]').tab('show');
+
+            }
+            else if (step == 2) {
+                $('#step-nav a[href="#new-category"]').tab('show');
+            }
+            else {
+                $('#step-nav a[href="#new-task"]').tab('show');
+            }
+        }
+        $('#step-nav a[href="#new-project"]').click(function (e) {
+            e.preventDefault();
+            $(this).tab('show');
+        });
+        $('#step-nav a[href="#new-category"]').click(function (e) {
+            e.preventDefault();
+            $(this).tab('show');
+        });
+        $('#step-nav a[href="#new-task"]').click(function (e) {
+            e.preventDefault();
+            $(this).tab('show');
+        });
+
+
+        $('#form-wizard').on('submit', '#project-form', function (event) {
+            event.preventDefault();
+            var $this = $(this);
+            console.log($this.serialize());
+            var project_form_title = $this.find('#id_title').val();
+            var cookie = 'csrfmiddlewaretoken=' + getCookie('csrftoken') + '&';
+
+            if (project_form_title == "") {
+                $this.find("#div_id_title").addClass('error');
+                $(project_form_title).after('<span class="help-inline">Title required</span>');
+                $(project_form_title).focus();
+                return false;
+            } else {
+                $('.help-inline').remove();
+                $("#div_id_title").removeClass('error');
+            }
+            $.ajax({
+                url: project_form_url,
+                type: "POST",
+                data: cookie + $this.serialize(),
+                success: function (data) {
+                    console.log(data['form_html']);
+                    if (!(data['success'])) {
+                        console.log('Fail');
+                        $this.replaceWith(data['form_html']);
+                    }
+                    else {
+                        project_form_url = data['update_url'];
+                        project_id = data['pk'];
+                        console.log('PID:  ' + data['pk']);
+                        //$('#new-project').find('.success-message').show(1000).hide(5000);
+                        showStep(2);
+                        $('#new-category input#id_title').focus();
+                    }
+                },
+                error: function () {
+                    $('#new-project').find('.error-message').show()
+                }
+            });
+            return false;
+        });
+
+        $('#form-wizard').on('submit', '#task-category-form', function (event) {
+            var $this = $(this);
+            event.preventDefault();
+            var $this_title = $this.find('#id_title').val();
+            var this_url;
+            var cookie = 'csrfmiddlewaretoken=' + getCookie('csrftoken') + '&';
+
+            if (!$(this).attr('action')) {
+                this_url = category_form_url;
+            } else {
+                this_url = $(this).attr('action');
+            }
+
+            console.log(cookie + $(this).serialize());
+            $.ajax({
+                url: this_url,
+                type: "POST",
+                data: cookie + $(this).serialize(),
+                success: function (data) {
+                    if (!(data['success'])) {
+                        $this.replaceWith(data['form_html']);
+                    }
+                    else {
+                        $this.replaceWith(data['form_html']);
+                        // updates taskform with new category option
+                        getTaskForm(task_form_url);
+                        //$this.find('.success-message').show(1000).hide(5000);
+                        if ((data['new'])) {
+                            $('#task-category-list').prepend('<li><a href="' + data['update_url'] + '">' + $this_title + '</a><ul id="ul-category-' + data['pk'] + '"></ul></li>');
+                        }
+                    }
+                },
+                error: function () {
+                    $this.find('.error-message').show()
+                }
+            });
+            return false;
+        });
 
         $('#form-wizard').on('submit', '#task-form', function (event) {
-            var $task_form = $(this);
             event.preventDefault();
+            var $task_form = $(this);
             var task_form_title = $task_form.find('#id_title').val();
             var task_form_category = $task_form.find('#id_category').val();
+            var task_form_project = $task_form.find('#id_project');
             var task_url;
             var cookie = 'csrfmiddlewaretoken=' + getCookie('csrftoken') + '&';
+
+            if (task_form_project.val() == "") {
+                task_form_project.val(project_id);
+            }
 
             if (!$(this).attr('action')) {
                 task_url = task_form_url;
@@ -178,19 +285,16 @@
             $.ajax({
                 url: task_url,
                 type: "POST",
-                data:  cookie + $(this).serialize(),
+                data: cookie + $(this).serialize(),
                 success: function (data) {
                     if (!(data['success'])) {
-                        // Here we replace the form, for the
                         $task_form.replaceWith(data['form_html']);
                     }
                     else {
-                        // Here you can show the user a success message or do whatever you need
                         $task_form.replaceWith(data['form_html']);
                         $task_form.find('.success-message').show(1000).hide(5000);
-                        console.log(task_form_category);
                         if ((data['new'])) {
-                            $('#category-' + task_form_category).prepend('<li><a href="' + data['update_url'] + '">' + task_form_title + '</a></li>');
+                            $('#ul-category-' + task_form_category).prepend('<li><a href="' + data['update_url'] + '">' + task_form_title + '</a></li>');
                         }
                     }
                 },
@@ -204,7 +308,17 @@
 
         $('#task-category-list').on('click', 'a', function (event) {
             event.preventDefault();
-            getTaskForm($(this).attr('href'));
+            var $this = $(this);
+            $('#task-category-list li').removeClass('active');
+            if ($this.is('[href*="category"]')) {
+                showStep(2);
+                getTaskCategoryForm($(this).attr('href'));
+            }
+            else {
+                showStep(3);
+                getTaskForm($(this).attr('href'));
+            }
+            $this.parent().addClass('active')
         });
     </script>
 
