--- a/cpm/projects/templates/projects/project_form.html
+++ b/cpm/projects/templates/projects/project_form.html
@@ -103,6 +103,7 @@
     <script src="{% static 'js/projects/projectWizard.js' %}"></script>
 
     <script type="text/javascript">
+    // TODO: THIS IS ONLY PARTIALLY WORKING. Wont work for tasks yet
         $('#task-category-list').sortable({
             update: function(event, ui) {
             },
