--- a/cpm/projects/static/less/variables.less
+++ b/cpm/projects/static/less/variables.less
@@ -31,7 +31,7 @@
 
 // Scaffolding
 // -------------------------
-@bodyBackground:        #3e3e3e;
+@bodyBackground:        @white;
 @textColor:             @grayDark;
 
 
