--- a/cpm/cpm/templates/base.html
+++ b/cpm/cpm/templates/base.html
@@ -61,7 +61,7 @@
 <li class="dropdown"><a href="#" data-toggle="dropdown">Projects</a>
 <ul class="dropdown-menu">
 <li><a href="{% url 'projects:project-list' user.id %}">My Projects</a></li>
-    <li><a href="{% url 'projects:project-form' %}">New Projects</a></li>
+    <li><a href="{% url 'projects:project-wizard' %}">New Projects</a></li>
 </ul>
 </li>
 {% endif %}
